<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>

    <string name="contact_contractLeftFragment4">数量不能为0</string>
    <string name="contact_orderRecordsActivity1">持仓</string>
    <string name="contact_contact_dialog_close_order220">持仓量</string>
    <string name="contact_contractLeftFragment5">市价交易</string>
    <string name="contact_contact_activity_order_records410">爆仓率</string>
    <string name="contact_contact_dialog_create_order20">下单确认</string>
    <string name="contact_contact_fragment_pankou40">盘口</string>
    <string name="contact_contractLeftFragment6">限价交易</string>
    <string name="contact_contractLeftFragment7">杠杆倍数  </string>
    <string name="contact_contact_dialog_close_order340">张</string>
    <string name="contact_contact_item_deal730">浮动盈亏 16.00</string>
    <string name="contact_contractLeftFragment1">请输入价格</string>
    <string name="contact_contact_item_hold370">数量</string>
    <string name="contact_contractLeftFragment2">请输入数量</string>
    <string name="contact_contactCreateDialog1">传入订单信息</string>
    <string name="contact_contractLeftFragment3">价格不能为0</string>
    <string name="contact_contact_dialog_close_order300">平仓张数</string>
    <string name="contact_contact_item_deal370">成交量</string>
    <string name="contact_contact_item_entrust390">止盈价格</string>
    <string name="contact_contact_item_deal770">系统强平</string>
    <string name="contact_contact_fragment_contract290">当前委托</string>
    <string name="contact_contact_item_entrust430">止损价格</string>
    <string name="contact_contact_dialog_close_order150">最新价</string>
    <string name="contact_orderRecordsActivity3">成交</string>
    <string name="contact_contact_activity_order_records170">可用USDT</string>
    <string name="contact_contact_dialog_close_order390">取消</string>
    <string name="contact_orderRecordsActivity2">委托</string>
    <string name="contact_contact_fragment_contract130">风险率:</string>
    <string name="contact_contact_item_deal520">过夜费</string>
    <string name="contact_contact_dialog_close_order20">平仓确认</string>
    <string name="contact_contact_activity_order_records340">浮动盈亏</string>
    <string name="contact_contact_activity_order_records100">动态权益</string>
    <string name="contact_contact_dialog_close_order410">确认</string>
    <string name="contact_contact_item_deal480">手续费</string>
    <string name="contact_contact_item_entrust280">委托价</string>
    <string name="contact_contact_dialog_setting_order310">请设置止损价格</string>
    <string name="contact_contact_dialog_setting_order190">请设置止盈价格</string>
    <string name="contact_contact_item_hold790">平仓</string>
    <string name="contact_holdFragment5">浮动盈亏  </string>
    <string name="contact_dealFragment2">止盈平仓</string>
    <string name="contact_contactCloseOrderDialog3">请输入平仓张数</string>
    <string name="contact_dealFragment1">手动平仓</string>
    <string name="contact_contactCloseOrderDialog4">可平张数为</string>
    <string name="contact_dealFragment9">盈亏  </string>
    <string name="contact_dealFragment8">限价</string>
    <string name="contact_dealFragment7">市价</string>
    <string name="contact_contact_dialog_create_order340">杠杆倍数</string>
    <string name="contact_dealFragment6">卖出开空</string>
    <string name="contact_dealFragment5">买入开多</string>
    <string name="contact_contact_dialog_create_order100">买入</string>
    <string name="contact_dealFragment4">系统平仓</string>
    <string name="contact_dealFragment3">止损平仓</string>
    <string name="contact_contact_dialog_create_order300">保证金</string>
    <string name="contact_contact_activity_order_records20">全部订单</string>
    <string name="contact_contact_item_entrust210">委托量</string>
    <string name="contact_contact_item_deal300">平仓价</string>
    <string name="contact_contact_fragment_contract_left240">可用</string>
    <string name="contact_contact_dialog_create_order190">价格</string>
    <string name="contact_contact_fragment_contract_left440">占用保证金:</string>
    <string name="contact_contact_fragment_contract_left200">以当前最优价格交易</string>
    <string name="contact_contact_dialog_create_order230">数量</string>
    <string name="contact_contact_item_deal260">持仓价</string>
    <string name="contact_contact_dialog_close_order80">类型：</string>
    <string name="contact_contact_item_entrust100">撤单</string>
    <string name="contact_contactOrderSettingDialog4">最大止损价为</string>
    <string name="contact_contactOrderSettingDialog40">最小止损价为</string>
    <string name="contact_contactOrderSettingDialog3">最小止盈价为</string>
    <string name="contact_contactOrderSettingDialog30">最大止盈价为</string>
    <string name="contact_contact_dialog_setting_order290">止损价格</string>
    <string name="contact_contact_item_hold770">修改</string>
    <string name="contact_contact_activity_order_records240">冻结USDT</string>
    <string name="contact_contact_dialog_setting_order170">止盈价格</string>
    <string name="contact_contact_dialog_create_order80">方向</string>
    <string name="contact_contract_list">合约列表</string>
    <string name="contact_input_count">输入数量</string>
    <string name="contact_opening_time">建仓时间</string>
    <string name="contact_closeing_time">平仓时间</string>
    <string name="contact_leverage_multiple">杠杆倍数</string>
    <string name="contact_share">分享</string>
    <string name="contact_please_login">请登录</string>
    <string name="contact_save_pic">保存图片</string>
    <string name="contact_share_des">一般一般 ，翻了几倍</string>
    <string name="contact_share_profit_amount">盈利金额</string>
    <string name="contact_share_usdt_contract">USDT合约</string>
    <string name="contact_share_opening_price">开仓价</string>
    <string name="contact_share_king_of_contract">合约之王</string>
    <string name="contact_share_right_of_interpretation">最终解释权归CICOIN所有</string>
    <string name="contact_one_button_closing">一键\n平仓</string>
    <string name="contact_tips">提醒</string>
    <string name="contact_close_all_order_des">是否要确认平仓？</string>
    <string name="contact_burst_rate_des">当风险率低于%s 系统会自动强平</string>
    <string name="contact_verifyHomeActivity4">请先完成初级实名认证</string>
    <string name="contact_confirm_cancle_order">确定要撤销订单吗?</string>
</resources>
