<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:background="@color/common_background" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" android:padding="@dimen/common_margin">

    <LinearLayout android:gravity="center_vertical" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">

        <TextView android:gravity="center_vertical" android:id="@+id/tv_order_type" android:layout_height="match_parent" android:layout_width="wrap_content" android:textColor="@color/common_green" tools:text="@string/contact_dealFragment5"/>


        <TextView android:gravity="center_vertical" android:id="@+id/tv_coin_name" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_width="wrap_content" android:textColor="@color/common_text" tools:text="ETH/USDT"/>


        <TextView android:gravity="center_vertical" android:id="@+id/tv_create_time" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_hint" android:textSize="12sp" tools:text="11-05 15:25"/>

        <Button android:background="@drawable/common_tip_50" android:id="@+id/btn_cancel" android:layout_height="26dp" android:layout_width="50dp" android:text="@string/contact_contact_item_entrust100" android:textColor="@color/common_text"/>

    </LinearLayout>


    <TableLayout android:layout_height="wrap_content" android:layout_width="match_parent">

        <TableRow android:paddingBottom="5dp" android:paddingTop="5dp">

            <TextView android:gravity="center_vertical" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/contact_contact_dialog_close_order80" android:textColor="@color/common_hint" android:textSize="12sp"/>

            <TextView android:gravity="center_vertical" android:id="@+id/tv_price_type" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_weight="1" android:layout_width="0dp" android:text="@string/contact_dealFragment8" android:textColor="@color/common_text" android:textSize="12sp"/>

            <TextView android:gravity="center_vertical" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_width="wrap_content" android:text="@string/contact_contact_item_entrust210" android:textColor="@color/common_hint" android:textSize="12sp"/>

            <TextView android:gravity="center_vertical" android:id="@+id/tv_order_num" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" android:textSize="12sp" tools:text="100"/>
        </TableRow>

        <TableRow android:paddingBottom="5dp" android:paddingTop="5dp">

            <TextView android:gravity="center_vertical" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/contact_contact_item_entrust280" android:textColor="@color/common_hint" android:textSize="12sp"/>

            <TextView android:gravity="center_vertical" android:id="@+id/tv_create_price" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" android:textSize="12sp" tools:text="@string/contact_dealFragment7"/>

            <TextView android:gravity="center_vertical" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_width="wrap_content" android:text="@string/contact_contact_dialog_create_order300" android:textColor="@color/common_hint" android:textSize="12sp"/>

            <TextView android:gravity="center_vertical" android:id="@+id/tv_total_money" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" android:textSize="12sp" tools:text="100"/>
        </TableRow>

        <TableRow android:paddingBottom="5dp" android:paddingTop="5dp" android:visibility="gone">

            <TextView android:gravity="center_vertical" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/contact_contact_item_entrust390" android:textColor="@color/common_hint" android:textSize="12sp"/>

            <TextView android:gravity="center_vertical" android:id="@+id/tv_win_price" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" android:textSize="12sp" tools:text="100.00"/>

            <TextView android:gravity="center_vertical" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_width="wrap_content" android:text="@string/contact_contact_item_entrust430" android:textColor="@color/common_hint" android:textSize="12sp"/>

            <TextView android:gravity="center_vertical" android:id="@+id/tv_loss_price" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" android:textSize="12sp" tools:text="100.00"/>
        </TableRow>

        <TableRow android:paddingBottom="5dp" android:paddingTop="5dp">

            <TextView android:gravity="center_vertical" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/contact_contact_item_deal480" android:textColor="@color/common_hint" android:textSize="12sp"/>

            <TextView android:gravity="center_vertical" android:id="@+id/tv_fee" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" android:textSize="12sp" tools:text="30"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
