<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">

    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">

        <TextView android:layout_height="wrap_content" android:layout_weight="0.3" android:layout_width="0dp" android:text="@string/contact_contact_fragment_pankou40" android:textColor="@color/common_hint" android:textSize="12sp"/>

        <TextView android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp" android:text="@string/contact_contact_dialog_create_order190" android:textColor="@color/common_hint"/>

        <TextView android:gravity="right" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp" android:text="@string/contact_contact_dialog_create_order230" android:textColor="@color/common_hint"/>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView android:id="@+id/sell_list" android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent" android:nestedScrollingEnabled="false"/>

    <TextView android:id="@+id/tv_price" android:layout_height="wrap_content" android:layout_width="match_parent" android:textColor="@color/common_text" android:textSize="24sp" tools:text="1000.00"/>

    <TextView android:id="@+id/tv_cny_price" android:layout_height="wrap_content" android:layout_width="match_parent" android:textColor="@color/common_text" android:textSize="11sp" tools:text="≈7000.00 CNY"/>

    <android.support.v7.widget.RecyclerView android:id="@+id/buy_list" android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent"/>


</LinearLayout>
